[package]
name = "context-mapper"
description = " Single rust macro for generating different maps "
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context-mapper-derive = { version = "0.1.0", path = "./context-mapper-derive" }

[workspace]
members = ["./context-mapper-derive", "example"]
