[package]
name = "context-mapper-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
syn = { version = "2.0.48", features = ["extra-traits"] }
quote = "1.0.35"
snailquote = "0.3.1"
